refactor(doctor, especialidad): simplify filtering logic and remove redundant validation
The filtering logic in DoctorServiceImpl and EspecialidadServiceImpl was refactored to be more concise and readable. Redundant validation methods and duplicate repository annotations were removed to improve code maintainability. Additionally, the `toList()` method was used instead of `collect(Collectors.toList())` for simplicity.